# ansible-sft

./: README.md  default.nix  overlay.nix  pyproject.toml  sources.json
.github/workflows/: molecule.yml
meta/: main.yml
nix/: default.nix  pyproject.toml
roles/monitoring-certs/meta/: main.yml
roles/monitoring-certs/tasks/: ca-cert.yml  client-cert.yml  main.yml
roles/sft-monitoring-certs/: README.md
roles/sft-monitoring-certs/tasks/: assert.yml  ca-cert.yml  ca-private-key.yml  client-cert.yml  client-private-key.yml  main.yml
roles/sft-server/defaults/: main.yml
roles/sft-server/files/: nginx.conf
roles/sft-server/handlers/: main.yml
roles/sft-server/meta/: main.yml
roles/sft-server/molecule/: requirements.yml
roles/sft-server/molecule/default/: cleanup.yml  converge.yml  destroy.yml  molecule.yml  requirements.yml  shared_vars.yml  verify.yml
roles/sft-server/molecule/inventory/group_vars/: all.yml
roles/sft-server/molecule/without-metrics/: converge.yml  inventory.yml  molecule.yml  verify.yml
roles/sft-server/tasks/: assert.yml  configure.yml  ingress.yml  install.yml  main.yml  prepare.yml  start.yml  test.yml  traffic.yml
roles/sft-server/templates/: certbot-http-challenge.vhost.conf.j2  certbot.ini.j2  coredump.conf.j2  metrics.vhost.conf.j2  nginx.conf.j2  nginx.service.override.j2  service.unit.j2  sftd.service.j2  sftd.unit.j2  sftd.vhost.conf.j2  vhost_sftd.conf.j2
roles/sft-server/vars/: main.yml
roles/srv-announcer/defaults/: main.yml
roles/srv-announcer/meta/: main.yml
roles/srv-announcer/tasks/: assert.yml  configure.yml  finalize.yml  install.yml  main.yml  start.yml  test.yml
roles/srv-announcer/templates/: discovery.slice.j2  srv-announcer.env.j2  srv-announcer.service.j2
roles/srv-announcer/vars/: main.yml
