[tool.poetry]
name = "ansible-sft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6, <3.10"
"molecule-hetznercloud" = ">= 0.2.2"
netaddr = ">= 0.7"
boto = ">= 2.49"
boto3 = ">= 1.10"
# pyyaml = ">= 5.1"
# cryptography = ">= 2.7"
# jmespath = ">= 0.9.4"
# "ruamel.yaml" = ">= 0.15.96"
# awscli = ">= 1.16.303"
# jinja2 = ">= 2.10"
# ansible = "*" #"~2.7"
# molecule = "*" #"^2.22" # depends on the version of ansible

[tool.poetry.dev-dependencies]

#[tool.poetry.scripts]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
