[tool.poetry]
name = "ansible-sft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6, <3.10"
"molecule-hetznercloud" = ">= 0.2.2"
netaddr = ">= 0.7"
boto = ">= 2.49"
boto3 = ">= 1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
