[tool.poetry]
name = "ansible-sft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7"
# molecule = "~2.22" # matches ansible 2.7
docker = "^4.3.1"
molecule = "*"
# ansible = "~2.7"
# ansible = "*"

[tool.poetry.dev-dependencies]

#[tool.poetry.scripts]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
